IDEA-1323: [Surveys]Fix double scrollbars in IE11

--- a/apps/surveys/styles.scss
+++ b/apps/surveys/styles.scss
@@ -31,7 +31,7 @@ pf-survey-data-cuts {
   }
 
   .expanded-row-grid-container {
-    .k-widget.k-grid {
+    .k-grid-aria-root {
       max-height: 547px;
       overflow-y: auto;
     }
